Added a booking history of user
